CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

FIND_PACKAGE(TULIP REQUIRED)

INCLUDE_DIRECTORIES(${TULIP_INCLUDE_DIR} ${CMAKE_CURRENT_SOURCE_DIR})

SET(PLUGIN_NAME "KnnConnectorOnLayout-${TULIP_VERSION}")

ADD_LIBRARY(${PLUGIN_NAME} SHARED KnnConnectorOnLayout.cpp)
TARGET_LINK_LIBRARIES(${PLUGIN_NAME} ${TULIP_LIBRARIES})

INSTALL(TARGETS ${PLUGIN_NAME} LIBRARY DESTINATION ${TULIP_PLUGINS_DIR})
